Fixed image and video size on small screens

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -8,9 +8,11 @@ a {
 	padding: 10px 15px 0px 15px;
 }
 
-img {
-	width: 75%;
-	height: 75%;
+img,iframe {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .panel-heading {
